Ansible/manifests/4k-fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: fe
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
